# windows-system-manager

./: README.md  pyproject.toml  requirements.txt
docs/: windows-feature-matrix.md  windows-migration-checklist.md  windows-migration-plan.md  windows-v1-scope.md
src/windows_system_manager/: main.py  models.py  ui.py
src/windows_system_manager/providers/: __init__.py  base.py  factory.py
src/windows_system_manager/providers/linux/: devices.py  packages.py  partitions.py  system_info.py
src/windows_system_manager/providers/windows/: devices.py  packages.py  partitions.py  system_info.py
tests/: test_linux_read_models.py  test_provider_resolution.py  test_system_info.py
