[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-system-manager"
version = "0.1.0"
description = "Windows-native system manager desktop app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psutil>=6.0.0",
  "PySide6>=6.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
